--- a/css/main.css
+++ b/css/main.css
@@ -3,17 +3,9 @@
   padding: 0;
 }
 
-.padding-container {
-  padding-top: 25px;
-}
-
 .img-user {
   width: 2.5em;
   height: 2.5em;
-}
-
-.padding-twitter {
-  padding: 15px 15px 15px 15px;
 }
 
 textarea {
@@ -21,10 +13,6 @@ textarea {
   padding: 10px;
   box-sizing: border-box;
   overflow-y: hidden; 
-}
-
-.padding-list-group {
-  padding: 0 15px 0 15px;
 }
 
 .img-user-follow {
@@ -38,4 +26,13 @@ textarea {
 
 .mrg-btn {
   margin-top: 15px;
+}
+
+/* No gutters */
+
+.no-gutters {
+  margin-right: 0;
+  margin-left: 0;
+  padding-right: 0;
+  padding-left: 0;
 }
